--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://jayeshmirchandani.github.io/Demo-Analyve",
+  "homepage": "https://jayeshmirchandani.github.io/DemoSite",
   "name": "application",
   "version": "0.1.0",
   "private": true,
